FP-332: Added GND index (without data file) to the Fusepool Launcher config.